--- a/app/src/main/res/layout/activity_simple.xml
+++ b/app/src/main/res/layout/activity_simple.xml
@@ -1,17 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v4.widget.DrawerLayout
+    android:id="@+id/drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent="true">
-        <TextView
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimary"
-            android:text="这是一个原生页面"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/my_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="打开菜单"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="这是一个原生页面"
+                android:textColor="#333333"/>
+
+            <Button
+                android:id="@+id/house_loan_compute_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="房贷计算器"/>
+        </LinearLayout>
+    </RelativeLayout>
+    <LinearLayout
+        android:id="@+id/drawer_left"
+        android:layout_gravity="start"
+        android:orientation="vertical"
+        android:background="@color/colorPrimary"
+        android:layout_width="150dp"
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/text_menu"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#333333"
+            android:text="This is left menu"/>
     </LinearLayout>
-</RelativeLayout>
+
+</android.support.v4.widget.DrawerLayout>
