--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#9E9E9E</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#F48FB1</color>
     <color name="colorWhite">#FFFFFF</color>
 </resources>
